--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,14 +11,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginBottom="@dimen/activity_vertical_margin">
             <ImageView
                 android:id="@+id/picture"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_action_name"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+                android:scaleType="fitCenter"
+                android:layout_margin="@dimen/activity_vertical_margin"/>
             <TextView
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
