--- a/app/src/main/res/layout/fragment_profile_settings.xml
+++ b/app/src/main/res/layout/fragment_profile_settings.xml
@@ -17,14 +17,15 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_action_name"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:id="@+id/editPic" />
             <EditText
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:text="Sruti Guhathakurta"
                 android:gravity="center"
                 android:textSize="25sp"
-                android:id="@+id/full_name"
+                android:id="@+id/full_name_text"
                 android:textColor="@color/Header"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"/>
             <Spinner
@@ -108,7 +109,7 @@
                 android:layout_height="wrap_content"
                 android:text="Running Coding Traveling Watching Netflix"
                 android:textSize="15sp"
-                android:id="@+id/interestsTV"
+                android:id="@+id/interestsET"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:textColor="@color/text"/>
             <Button
