--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -21,7 +21,7 @@
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:gravity="center"
-                />
+                android:id="@+id/toptext" />
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -43,14 +43,16 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_edit"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:id="@+id/pencil" />
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Post to local feed..."
                 android:background="@color/cardview_light_background"
                 android:layout_marginRight="20dp"
-                android:padding="5dp" />
+                android:padding="5dp"
+                android:id="@+id/fledit" />
 
         </LinearLayout>
     </RelativeLayout>
